--- a/src/views/HomePage/HomePage.module.css
+++ b/src/views/HomePage/HomePage.module.css
@@ -1,3 +1,22 @@
+.Title {
+  padding: 8px;
+  margin-top: 0;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+
+  color: #fff;
+  font-size: 40px;
+  font-weight: 500;
+  text-align: center;
+  background-image: repeating-linear-gradient(
+    -45deg,
+    #606dbc,
+    #606dbc 15px,
+    #465298 15px,
+    #465298 30px
+  );
+}
+
 .ImageGallery {
   display: grid;
   max-width: calc(100vw - 48px);
