--- a/src/views/HomePage/HomePage.module.css
+++ b/src/views/HomePage/HomePage.module.css
@@ -1,8 +1,7 @@
 .Title {
   padding: 8px;
   margin-top: 0;
-  border-bottom-left-radius: 8px;
-  border-bottom-right-radius: 8px;
+  border-radius: 8px;
 
   color: #fff;
   font-size: 40px;
