--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import-normalize;
-
 html {
   box-sizing: border-box;
   width: 100vw;
@@ -33,4 +31,8 @@ img {
 
 button {
   cursor: pointer;
+}
+
+ul {
+  text-decoration: none;
 }
