--- a/src/views/MoviesPage/MoviesPage.module.css
+++ b/src/views/MoviesPage/MoviesPage.module.css
@@ -1,3 +1,7 @@
+/* .Wrapper {
+  margin-top: 25px;
+} */
+
 .ImageGallery {
   display: grid;
   max-width: calc(100vw - 48px);
@@ -26,4 +30,10 @@
   width: 100%;
   height: 554px;
   object-fit: cover;
+}
+
+.MovieTitle {
+  color: #3f51b5;
+  text-align: center;
+  font-size: medium;
 }
