--- a/src/views/Cast/Cast.module.css
+++ b/src/views/Cast/Cast.module.css
@@ -1,7 +1,7 @@
 .CastList {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: flex-start;
   list-style-type: none;
   font-size: 14px;
 }
