--- a/src/views/Cast/Cast.module.css
+++ b/src/views/Cast/Cast.module.css
@@ -1,11 +1,19 @@
 .CastList {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  display: grid;
+  max-width: calc(100vw - 48px);
+  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+  grid-gap: 16px;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0;
+  list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+
   list-style-type: none;
   font-size: 14px;
 }
 
 .CastImg {
-  margin-right: 20px;
+  min-height: 375px;
 }
